fixed alignment of work period on media queries

--- a/download/css/style.css
+++ b/download/css/style.css
@@ -2631,11 +2631,11 @@ h4.package {
         padding-left: 0;
     }
     .workLength h5 {
-        line-height: 1rem;
+        line-height: 1.9em;
         letter-spacing: 0.5px;
     }
     .workLength2 h5 {
-        line-height: 1rem;
+        line-height: 1.9em;
         letter-spacing: 0.5px;
     }
     .skills-circle {
